...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
            "value" : "Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
    "Create New Playlist" : {

    },
    "Create Playlist" : {

    },
    "Cry Detection" : {

    },
    "Cry detection is always free. We believe every parent deserves help." : {

    },
    "Cry Pattern Changed" : {
...
            "value" : "Sprachsteuerung"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Voice Control"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Control de voz"
...
    "Learning Data Reset" : {

    },
    "Learning Status" : {

    },
    "Library" : {

    },
    "Listening for cry" : {

    },
    "Listening..." : {
...
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
            "value" : "Einstellungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuración"
...
